--- a/index.html
+++ b/index.html
@@ -128,44 +128,43 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
 
-    <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
+    <div class="container d-flex flex-column align-items-center justify-content-center aos-init aos-animate"
+      data-aos="fade-up">
 
       <div class="container" style="padding-bottom:0px!important; padding-top:0px!important;">
 
-        <div class="col-sm-4" class="sponsor big">
+        <div class="col-sm-4">
           <div class="logo mr-auto img-fluid" style="width: 100%;height: 150px;"><img src="assets/img/dst_sq1.jpeg"
+              alt=""></div>
+        </div>
+        <div class="col-sm-4">
+          <div class="logo mr-auto img-fluid" style="width: 100%;height: 150px;"><img src="assets/img/logoiiita2.png"
+              alt=""></div>
+        </div>
+        <div class="col-sm-4">
+          <div class="logo mr-auto img-fluid" style="width: 100%;height: 150px;"><img src="assets/img/ieeeUP.png"
               alt="">
           </div>
         </div>
-        <div class="col-sm-4" class="sponsor big">
-          <div class="logo mr-auto img-fluid" style="width: 100%;height: 150px;"><img src="assets/img/logoiiita2.png"
-              </div>
-            <div class="col-sm-4" class="sponsor big">
-              <div class="logo mr-auto img-fluid" style="width: 100%;height: 150px;"><img src="assets/img/ieeeUP.png"
-                  alt=""></div>
-            </div>
 
-          </div>
+      </div>
 
 
-          <h2 style="color: white; font-family: 'Be Vietnam';">DST SPONSORED TRAINING PROGRAMME (FDP) ON
-            ENTREPRENEURSHIP
-          </h2>
-          <h4 style="color: white; font-family: 'Be Vietnam'">( ONLINE MODE)</h4>
-          <h1 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">FOR MAKING SELF SUFFICIENT
-            ENTREPRENEURS
-            & INNOVATORS</h1>
-          <h3 style="color: white; font-family: 'Alegreya SC'">(TWO WEEKS)</h3>
-          <h4 style="color: white; font-family: 'Alegreya SC'">Technically sponsored by IEEE UP SECTION (INDIA)</h4>
-          <h4 style="color: white; font-family: 'Alegreya SC' ;font-size:15px">(50% discount for IEEE Members)</h4>
+      <h2 style="color: white; font-family: 'Be Vietnam';">DST SPONSORED TRAINING PROGRAMME (FDP) ON ENTREPRENEURSHIP
+      </h2>
+      <h4 style="color: white; font-family: 'Be Vietnam'">( ONLINE MODE)</h4>
+      <h1 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">FOR MAKING SELF SUFFICIENT ENTREPRENEURS
+        &amp; INNOVATORS</h1>
+      <h3 style="color: white; font-family: 'Alegreya SC'">(TWO WEEKS)</h3>
+      <h4 style="color: white; font-family: 'Alegreya SC'">Technically sponsored by IEEE UP SECTION (INDIA)</h4>
+      <h4 style="color: white; font-family: 'Alegreya SC' ;font-size:15px">(50% discount for IEEE Members)</h4>
 
 
-          <a href="assets/brochure.pdf" target="_blank" class="btn-get-started scrollto">DOWNLOAD BROCHURE</a>
-          <!--img src="assets/img/iiita3.jpg" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150"-->
-        </div>
+      <a href="assets/brochure.pdf" target="_blank" class="btn-get-started scrollto">DOWNLOAD BROCHURE</a>
+      <!--img src="assets/img/iiita3.jpg" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150"-->
+    </div>
 
-  </section><!-- End Hero -->
-
+  </section>
   <main id="main">
 
 
@@ -471,7 +470,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">10:15 AM : 11:00 AM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">10:15 AM- 11:00 AM</h4>
                       </div>
                       <div>
                         <h6>Unleashing Entrepreneurship:
@@ -537,7 +536,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM: 12:45PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45PM</h4>
                       </div>
                       <div>
                         <h6>Approaches for Entrepreneurship Development
@@ -559,7 +558,7 @@
                     </div>
                     <div class=" " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM : 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Ecosystem Available for promoting Entrepreneurship</h6>
@@ -604,7 +603,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM : 12:45PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45PM</h4>
                       </div>
                       <div>
                         <h6>How to promote Entrepreneurship Development Programmes: Methodology, Tools & Techniques
@@ -626,7 +625,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM : 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Assessing Training Needs</h6>
@@ -672,7 +671,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM: 12:45PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45PM</h4>
                       </div>
                       <div>
                         <h6>Business opportunity Identification: Sources of Information
@@ -694,7 +693,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM: 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>How to assess Pre-feasibility of Project through Market Survey</h6>
@@ -738,7 +737,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM : 12:45PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45PM</h4>
                       </div>
                       <div>
                         <h6>Role & Responsibilities of Supporting Agencies: DIC, SIDC, DI-MSME etc. Panel discussion
@@ -761,7 +760,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM: 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Support available from Financial Institutions including Banks: Panel discussion</h6>
@@ -806,7 +805,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM : 12:45pm</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45pm</h4>
                       </div>
                       <div>
                         <h6>Virtual tour to a Factory & online experience sharing with Successful Entrepreneur
@@ -828,7 +827,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM : 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Virtual tour to a Factory & online experience sharing with Successful Entrepreneur</h6>
@@ -873,7 +872,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM : 12:45 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45 PM</h4>
                       </div>
                       <div>
                         <h6>Achievement Motivation: Developing Soft Skills ( CASE STUDY)
@@ -895,7 +894,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM : 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Achievement Motivation: Developing Soft Skills ( CASE STUDY)</h6>
@@ -941,7 +940,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM : 12:45 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45 PM</h4>
                       </div>
                       <div>
                         <h6>Technology Sourcing: Support available from R&D Institutions
@@ -963,7 +962,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM : 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Promoting Innovative Ventures: Role of Technology Business Incubator (TBI)</h6>
@@ -1010,7 +1009,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM: 12:45 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45 PM</h4>
                       </div>
                       <div>
                         <h6>IPR, Pattern, Copy Rights, Trade Mark and Industrial Management
@@ -1032,7 +1031,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM: 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Marketing management in MSME: Sales, Advertisement & Brand Building</h6>
@@ -1078,7 +1077,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM: 12:45 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45 PM</h4>
                       </div>
                       <div>
                         <h6>Financial Management in MSME
@@ -1100,7 +1099,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM : 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Problem solving & decision making</h6>
@@ -1147,7 +1146,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM: 12:45 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45 PM</h4>
                       </div>
                       <div>
                         <h6>Developing Business Plan (Project Report): Format, Content & Sequencing
@@ -1169,7 +1168,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM: 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>BEP, Working Capital Assessment</h6>
@@ -1217,7 +1216,7 @@
                     </div>
                     <div class="   " style="margin: 20px 0">
                       <div style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM: 12:45 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">11:30 AM- 12:45 PM</h4>
                       </div>
                       <div>
                         <h6>Legal Formalities in an Enterprise: (Factory Act, PF, Labour Laws etc.)
@@ -1239,7 +1238,7 @@
                     </div>
                     <div class="  " style="margin: 20px 0">
                       <div class="" style="width: 200px">
-                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM: 05:15 PM</h4>
+                        <h4 class="font-weight-bold" style="color: #9b5de5">04:00 PM- 05:15 PM</h4>
                       </div>
                       <div class="">
                         <h6>Valedictory</h6>
