--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
       <h1 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">FOR MAKING SELF SUFFICIENT ENTREPRENEURS
         &amp; INNOVATORS</h1>
       <h3 style="color: white; font-family: 'Alegreya SC'">(TWO WEEKS)</h3>
-      <h4 style="color: white; font-family: 'Alegreya SC'">Technically sponsored by IEEE UP SECTION (INDIA)</h4>
-      <h4 style="color: white; font-family: 'Alegreya SC' ;font-size:15px">(50% discount for IEEE Members)</h4>
+      <h4 style="color: white; font-family: 'Alegreya SC'">TECHNICAL SPONSOR IEEE UP SECTION (INDIA)</h4>
+      <!-- <h4 style="color: white; font-family: 'Alegreya SC' ;font-size:15px">(50% discount for IEEE Members)</h4> -->
 
 
       <a href="assets/brochure.pdf" target="_blank" class="btn-get-started scrollto">DOWNLOAD BROCHURE</a>
