--- a/index.html
+++ b/index.html
@@ -1503,7 +1503,7 @@ b. For Research Scholars and Students (UG, PG members of IEEE ):<br>
               data-aos-delay="100">
               <div class="icon-box" style="width:100%">
                 <img src="assets/img/vijayshri.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. VIJAYSHRI TEWARI
+                <h4 class="title">Dr. Vijayshri Tewari
                 </h4>
                 <p class="description">Associate Professor <br>
                   Registrar (Officiating)<br>
@@ -1513,7 +1513,7 @@ b. For Research Scholars and Students (UG, PG members of IEEE ):<br>
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
               data-aos-delay="100">
               <div class="icon-box" style="width:100%">
-                <img src="assets/img/ranjitsingh.jpg" class="img-fluid circular--square" alt="">
+                <img src="assets/img/ranjitsingh2.jpg" class="img-fluid circular--square" alt="">
                 <h4 class="title">Dr. Ranjit Singh
                 </h4>
                 <p class="description">Associate Professor IIITA<br>
@@ -1569,7 +1569,7 @@ b. For Research Scholars and Students (UG, PG members of IEEE ):<br>
               data-aos-delay="100">
               <div class="icon-box" style="width:100%">
                 <img src="assets/img/testimonials/profPA.png" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. PRAGYA SINGH
+                <h4 class="title">Dr. Pragya Singh
                 </h4>
                 <p class="description">Assistant Professor <br>
                   Department of Management Studies, IIITA</p>
