--- a/index.html
+++ b/index.html
@@ -1513,7 +1513,7 @@ b. For Research Scholars and Students (UG, PG members of IEEE ):<br>
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
               data-aos-delay="100">
               <div class="icon-box" style="width:100%">
-                <img src="assets/img/ranjitsingh2.jpg" class="img-fluid circular--square" alt="">
+                <img src="assets/img/ranjitsingh.jpg" class="img-fluid circular--square" alt="">
                 <h4 class="title">Dr. Ranjit Singh
                 </h4>
                 <p class="description">Associate Professor IIITA<br>
@@ -1687,16 +1687,6 @@ b. For Research Scholars and Students (UG, PG members of IEEE ):<br>
           </div>
 
 
-
-          <div class="testimonial-item">
-
-            <img src="assets/img/testimonials/khapre.jpeg" alt="" height="325">
-            <h3>Nikhil Khapre</h3>
-            <h4>Mtech IT</h4>
-            <h4>mit2020012@iiita.ac.in</h4>
-            <h4>8700902991</h4>
-            <br>
-          </div>
 
 
 
