final update objectives, front page

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
       </div>
 
 
-      <h2 style="color: white; font-family: 'Be Vietnam';">DST SPONSORED TRAINING PROGRAMME (FDP) ON ENTREPRENEURSHIP
+      <h2 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">DST SPONSORED TRAINING PROGRAMME (FDP) ON ENTREPRENEURSHIP
       </h2>
-      <h4 style="color: white; font-family: 'Be Vietnam'">( ONLINE MODE)</h4>
+      <h4 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">( ONLINE MODE)</h4>
       <h1 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">FOR MAKING SELF SUFFICIENT ENTREPRENEURS
         &amp; INNOVATORS</h1>
-      <h3 style="color: white; font-family: 'Alegreya SC'">(TWO WEEKS)</h3>
-      <h4 style="color: white; font-family: 'Alegreya SC'">TECHNICAL SPONSOR IEEE UP SECTION (INDIA)</h4>
+      <h3 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">(TWO WEEKS)</h3>
+      <h4 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">TECHNICAL SPONSOR <br>IEEE UP SECTION (INDIA)</h4>
       
 
 
@@ -184,13 +184,13 @@
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
             <h3>INTRODUCTION</h3>
-            <p class="font-italic">
+            <p class="">
               An entrepreneur is an individual who creates a new business,
               bearing most of the risks and enjoying most of the rewards.
               The entrepreneur is commonly seen as an innovator, a source of new ideas,
               goods, services, and business/or procedures.
             </p>
-            <p class="font-italic">Entrepreneurs play a key role in any economy, using the skills and initiative
+            <p class="">Entrepreneurs play a key role in any economy, using the skills and initiative
               necessary
               to anticipate needs and bring good new ideas to market. Entrepreneurs who prove to be successful
               in taking on the risks of a startup are rewarded with profits, fame, and continued growth opportunities.
@@ -222,10 +222,18 @@
               soothing effect to create a stimulating learning environment for everyone..
             </p>
             <h3>OBJECTIVE OF WORKSHOP</h3>
-            <p class="font-italic">
-              MAKING SELF SUFFICIENT ENTREPRENEURS &amp; INNOVATORS
-              Understanding importance of Entrepreneurship, its Present Scenario, Development Process etc
-            </p>
+            
+			
+			<ul>
+              <li><i class="icofont-check"></i> 
+			  Making self-sufficient Entrepreneurs & Innovators.</li>
+              <li><i class="icofont-check"></i> 
+			  Understanding importance of Entrepreneurship, its Present Scenario, 
+			  Development Process etc.</li>
+              <li><i class="icofont-check"></i> 
+			  To motivate Faculty Members/ Budding Technocrats to participate and learn 
+			  techniques of setting up a business unit.</li>
+            </ul>
 
           </div>
         </div>
@@ -236,10 +244,10 @@
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
             <h3>IEEE UP SECTION (INDIA)</h3>
-            <p class="font-italic">
-              ENTREPRENEURSHIP DEVELOPMENT will be immensely helpful for the Research community,Utility professionals and Industry Stakeholders as a major domain of interdisciplinary subject.
+            <p class="">
+              Entrepreneurship development will be immensely helpful for the Research community,Utility professionals and Industry Stakeholders as a major domain of interdisciplinary subject.
             </p>
-            <p class="font-italic">
+            <p class="">
               This Workshop is technically sponsored by IEEE UP SECTION (INDIA) for motivating budding technocrats to participate and learn the techniques of setting up a business unit.
               Fifty percent discount in fee will be provided to IEEE Members for attending DST Sponsored FDP.
             </p>
@@ -376,7 +384,7 @@
                     <b>a</b>. For Faculty Members, Trainers, Utility Professionals & Industry Stakeholders (for IEEE members):<br>
 <b style="margin-left: 2%">Registration Fee : ₹ 590 </b>*(Inclusive of 18% of GST)<br><br>
 
-<b>b</b>. For Research Scholars and Students (UG, PG members of IEEE ):<br>
+<b>b</b>. For Research Scholars and Students (for IEEE members):<br>
 <b style="margin-left: 2%">Registration Fee : ₹ 295 </b>*(Inclusive of 18% GST) 
                   </p>
                 </div>
