porf add modify

--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
 			<div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
               data-aos-delay="100">
               <div class="icon-box" style="width:100%">
-                <img src="assets/img/RAJBIR.jpg" class="img-fluid circular--square" alt="">
+                <img src="assets/img/rajbirP.jpg" class="img-fluid circular--square" alt="">
                 <h4 class="title">Dr. Rajbir Singh
                 </h4>
                 <p class="description">
