--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@
                 <img src="assets/img/madhvendra.jpg" class="img-fluid circular--square" alt="">
                 <h4 class="title">Dr. Madhvendra Misra
                 </h4>
-                <p class="description">Associate Professor IIITA<br>
+                <p class="description">Associate Professor<br>
                   Department of Management Studies, IIITA</p>
                 </p>
               </div>
@@ -1531,7 +1531,7 @@
                 <img src="assets/img/ranjitsingh2.jpg" class="img-fluid circular--square" alt="">
                 <h4 class="title">Dr. Ranjit Singh
                 </h4>
-                <p class="description">Associate Professor IIITA<br>
+                <p class="description">Associate Professor<br>
                   Department of Management Studies, IIITA</p>
               </div>
             </div>
