first commit proj 2

--- a/index.html
+++ b/index.html
@@ -370,24 +370,14 @@
                 <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="100">
                   <!--i class="bx bx-receipt"></i-->
                   <h4 style="font-size: 20px;">1. For Faculty Members, Trainers, Industry Professionals and Administrative officers</h4>
-                  <p class="description" style="margin-left: 5%;color:  #383838"><b>Registration Fee :₹ 1180 </b> *(Inclusive of 18% of GST)</p>
+                  <p class="description" style="margin-left: 5%;color:  #383838"><b>Registration Fee : ₹ 590 </b> *(Inclusive of 18% of GST)</p>
                 </div>
                 <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <!--i class="bx bx-cube-alt"></i-->
                   <h4 style="font-size: 20px;">2. For Research Scholars and Students (UG, PG)</h4>
-                  <p class="description" style="margin-left: 5%;color:  #383838"><b>Registration Fee : ₹ 590 </b>*(Inclusive of 18% of GST)</p>
+                  <p class="description" style="margin-left: 5%;color:  #383838"><b>Registration Fee : ₹ 295 </b>*(Inclusive of 18% of GST)</p>
                 </div>
-                <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <!--i class="bx bx-images"></i-->
-                  <h4 style="font-size: 20px;">3. For IEEE Members (50% rebate is provided on fee for registration)</h4>
-                  <p class="description" style="color:  #383838; margin-left: 5%;">
-                    <b>a</b>. For Faculty Members, Trainers, Utility Professionals & Industry Stakeholders (for IEEE members):<br>
-<b style="margin-left: 2%">Registration Fee : ₹ 590 </b>*(Inclusive of 18% of GST)<br><br>
-
-<b>b</b>. For Research Scholars and Students (for IEEE members):<br>
-<b style="margin-left: 2%">Registration Fee : ₹ 295 </b>*(Inclusive of 18% GST) 
-                  </p>
-                </div>
+                
              <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="200" style="margin-left: 30%">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform"
                target="_blank" class="about-btn" style="background-color: blue;font-size: 25px;">REGISTER ></a>
@@ -446,9 +436,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">12th
+                    <h2 class="text-capitalize font-weight-bold">1st
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -512,9 +502,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">13th
+                    <h2 class="text-capitalize font-weight-bold">2nd
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -579,9 +569,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">14th
+                    <h2 class="text-capitalize font-weight-bold">3rd
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -647,9 +637,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">15th
+                    <h2 class="text-capitalize font-weight-bold">4th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -713,9 +703,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">16th
+                    <h2 class="text-capitalize font-weight-bold">5th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -781,9 +771,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">17th
+                    <h2 class="text-capitalize font-weight-bold">6th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -848,9 +838,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">18th
+                    <h2 class="text-capitalize font-weight-bold">7th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -915,9 +905,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">19th
+                    <h2 class="text-capitalize font-weight-bold">8th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -984,9 +974,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">20th
+                    <h2 class="text-capitalize font-weight-bold">9th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -1052,9 +1042,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">21th
+                    <h2 class="text-capitalize font-weight-bold">10th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -1121,9 +1111,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">22th
+                    <h2 class="text-capitalize font-weight-bold">11th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
@@ -1191,9 +1181,9 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <span class="text-uppercase" style="color: #9b5de5">schedule</span>
-                    <h2 class="text-capitalize font-weight-bold">23th
+                    <h2 class="text-capitalize font-weight-bold">12th
 
-                      Feb, 2021</h2>
+                      March, 2021</h2>
                   </div>
                 </div>
                 <div class="row my-5">
