--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
                 </div>
 
                 <div class="col-md-12 icon-box" data-aos="fade-up" data-aos-delay="200" style="margin-left: 30%">
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLrdeoay5e3ZB02t4Dv0MyRQNwUbM6YKuvGgGnQPph-Zs_9Q/viewform"
-                    target="_blank" class="about-btn" style="background-color: blue;font-size: 25px;">REGISTER ></a>
+                  <a href="https://forms.gle/6oY5DQudanRrW17s5" target="_blank" class="about-btn"
+                    style="background-color: blue;font-size: 25px;">REGISTER ></a>
 
                 </div>
               </div>
@@ -1394,118 +1394,155 @@
           </div>
 
           <br><br><br>
+
+
+
           <div class="section-title">
-            <h2>DISTINGUISHED SPEAKERS</h2>
-            <!-- <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p> -->
+            <h2>OBSERVER DST</h2>
           </div>
-          <div class="row" style="margin-top: 28px;">
-            <br><br>
-
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/IYER.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Parameshwar P Iyer
-                </h4>
-                <p class="description">Principal Scientist <br>IISc Bangalore</p>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/rajbirP.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Rajbir Singh
-                </h4>
-                <p class="description">
-                  Professor<br>Behavioural Sciences<br>Shree Guru Gobind Singh Tricentenary University
-              </div>
-            </div>
-
-
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/new/SRangnekar.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Santosh Rangnekar </h4>
-                <p class="description">Professor<br>
-                  Department of Management Studies <br>
-                  Indian Institute of Technology, Roorkee </p>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/new/claret.jpeg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Claret Mendonca
-                </h4>
-                <p class="description">
-                  Professor<br>Head of Department<br>MBA Programme<br>Alva's Institute Of Engineering & Technology</p>
-              </div>
-            </div>
-          </div>
-          <br>
-          <br>
-
-          <div class="row" style="margin-top: 28px;">
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/new/piyush.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Piyush Verma</h4>
-                <p class="description">Associate Professor<br>
-                  Economics and Strategy<br>LM Thapar School of Management<br>
-                  Thapar Institute of Engineering & Technology </p>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/new/harshvardhan.png" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Harsh Vardhan Samalia
-                </h4>
-                <p class="description">Associate Professor <br>
-                  Department of Entrepreneurship Dev. & Industrial C<br>
-                  NITTTR, Chandigarh</p>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/ranjana.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Ranjana Vyas
-                </h4>
-                <p class="description"> PI & Coordinator, NEW GEN IEDC<br>
-                  Department of Information Technology, IIITA</p>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-              data-aos-delay="100">
-              <div class="icon-box" style="width:100%">
-                <img src="assets/img/new/utkarsh.jpg" class="img-fluid circular--square" alt="">
-                <h4 class="title">Dr. Utkarsh Goel
-                </h4>
-                <p class="description">Assistant Professor <br>
-                  Department of Information Technology, IIITA</p>
-              </div>
-            </div>
-
-
+        </div>
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+          <div class="testimonial-item icon-box">
+            <img src="assets/misra.jpeg" class="img-fluid circular--square" alt=""><br>
+            <h4 class="title">Dr.S.P.
+              Mishra </h4>
+            <h4 class="description">DIRECTOR </h4>
+            <h4 class="description">Department of Science & Technology Government of India</h4>
+            </p>
+            <br><br><br><br>
 
           </div>
+
+          <br><br><br <div class="section-title">
+          <h2>DISTINGUISHED SPEAKERS</h2>
+          <!-- <p>&#x1F469;&#x200D;&#x1F3EB; write somthing</p> -->
+        </div>
+        <div class="row" style="margin-top: 28px;">
+          <br><br>
+
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/IYER.jpg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Parameshwar P Iyer
+              </h4>
+              <p class="description">Principal Scientist <br>IISc Bangalore</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/rajbirP.jpg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Rajbir Singh
+              </h4>
+              <p class="description">
+                Professor<br>Behavioural Sciences<br>Shree Guru Gobind Singh Tricentenary University
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/ds.jpeg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Rajendra Prasad Das
+              </h4>
+              <p class="description">Pro-ViceChancell <br>
+                IGNOU</p>
+            </div>
+          </div>
+
+
+
+
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/new/SRangnekar.jpg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Santosh Rangnekar </h4>
+              <p class="description">Professor<br>
+                Department of Management Studies <br>
+                Indian Institute of Technology, Roorkee </p>
+            </div>
+          </div>
+
+        </div>
+        <br>
+        <br>
+
+        <div class="row" style="margin-top: 28px;">
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/new/claret.jpeg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Claret Mendonca
+              </h4>
+              <p class="description">
+                Professor<br>Head of Department<br>MBA Programme<br>Alva's Institute Of Engineering & Technology</p>
+            </div>
+          </div>
+
+
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/new/piyush.jpg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Piyush Verma</h4>
+              <p class="description">Associate Professor<br>
+                Economics and Strategy<br>LM Thapar School of Management<br>
+                Thapar Institute of Engineering & Technology </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/new/harshvardhan.png" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Harsh Vardhan Samalia
+              </h4>
+              <p class="description">Associate Professor <br>
+                Department of Entrepreneurship Dev. & Industrial C<br>
+                NITTTR, Chandigarh</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/ranjana.jpg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Ranjana Vyas
+              </h4>
+              <p class="description"> PI & Coordinator, NEW GEN IEDC<br>
+                Department of Information Technology, IIITA</p>
+            </div>
+          </div>
+
 
           <br><br>
 
         </div>
 
-        <!--div class="row" style="margin-top: 28px;">
+        <div class="row" style="margin-top: 28px;">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/new/utkarsh.jpg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Dr. Utkarsh Goel
+              </h4>
+              <p class="description">Assistant Professor <br>
+                Department of Information Technology, IIITA</p>
+            </div>
+          </div>
+        </div>
+        <br><br>
+
+      </div>
+
+      <!--div class="row" style="margin-top: 28px;">
 	
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
               data-aos-delay="100">
@@ -1519,10 +1556,10 @@
             </div>
 
           </div-->
-        <br><br>
-        <div class="" style="margin-left:20px;">
-          <p style="color:white">** Speakers are subject to change as per availability</p>
-        </div>
+      <br><br>
+      <div class="" style="margin-left:20px;">
+        <p style="color:white">** Speakers are subject to change as per availability</p>
+      </div>
 
       </div>
 
