update in cards

--- a/index.html
+++ b/index.html
@@ -150,17 +150,20 @@
 
 
       <h2 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">DST SPONSORED PROJECT <br> TWO WEEKS <br>
-        TRANNING PROGRAM (FDP) <br>
+        TRAINING PROGRAM (FDP) <br>
         ON
         ENTREPRENEURSHIP
       </h2>
       <h4 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">( ONLINE MODE)</h4>
       <h1 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">FOR MAKING SELF SUFFICIENT ENTREPRENEURS
         &amp; INNOVATORS</h1>
+
       <h3 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">(TWO WEEKS)</h3>
       <h4 style="font-family: 'Alegreya SC';font-size: 30px; color: orange;">TECHNICAL SPONSOR <br>IEEE UP SECTION
         (INDIA)</h4>
-
+      <h3 style="font-family: 'Advent Pro'; color: white;"> FDP TIMELINE
+        <br> MARCH 1ST - 12TH, 2021
+      </h3>
 
 
       <a href="assets/Brochure.pdf" target="_blank" class="btn-get-started scrollto">DOWNLOAD BROCHURE</a>
@@ -179,6 +182,7 @@
           <h2 style="font-family: 'Advent Pro';">DST SPONSORED TRAINING PROGRAMME (FDP)</h2>
           <h1 style="font-family: 'Cinzel Decorative';">MAKING SELF SUFFICIENT ENTREPRENEURS & INNOVATORS</h1>
           <h3 style="font-family: 'Advent Pro';">TECHNICAL SPONSOR IEEE UP SECTION (INDIA)</h3>
+
 
         </div>
 
@@ -1406,7 +1410,7 @@
             <img src="assets/misra.jpeg" class="img-fluid circular--square" alt=""><br>
             <h4 class="title">Dr.S.P.
               Mishra </h4>
-            <h4 class="description">DIRECTOR </h4>
+            <!-- <h4 class="description">DIRECTOR </h4> -->
             <h4 class="description">Department of Science & Technology Government of India</h4>
             </p>
             <br><br><br><br>
@@ -1456,6 +1460,24 @@
 
 
 
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/sverma.jpg" class="img-fluid circular--square" alt="">
+              <h4 class="title">Prof. Shekhar Verma
+              </h4>
+              <p class="description">Professor <br>
+                Department of Information Technology, IIITA</p>
+            </div>
+          </div>
+
+
+        </div>
+        <br>
+        <br>
+
+        <div class="row" style="margin-top: 28px;">
+
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
@@ -1467,12 +1489,6 @@
                 Indian Institute of Technology, Roorkee </p>
             </div>
           </div>
-
-        </div>
-        <br>
-        <br>
-
-        <div class="row" style="margin-top: 28px;">
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
@@ -1510,6 +1526,13 @@
             </div>
           </div>
 
+
+
+          <br><br>
+
+        </div>
+
+        <div class="row" style="margin-top: 28px;">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
@@ -1521,12 +1544,6 @@
             </div>
           </div>
 
-
-          <br><br>
-
-        </div>
-
-        <div class="row" style="margin-top: 28px;">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box" style="width:100%">
@@ -1537,7 +1554,25 @@
                 Department of Information Technology, IIITA</p>
             </div>
           </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon-box" style="width:100%">
+              <img src="assets/img/testimonials/profPA.png" class="img-fluid circular--square" alt="">
+              <h4 class="title">DR. PRAGYA SINGH
+
+              </h4>
+              <p class="description">Assistant Professor <br>
+                Department of Management Studies, IIITA</p>
+            </div>
+          </div>
         </div>
+
+
+
+        <!-- <div class="row" style="margin-top: 28px;"> -->
+
+        <!-- </div> -->
         <br><br>
 
       </div>
